# doglib

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  testing.h
docs/: dumpelf.md  dumpelf_writeup.md  extelf.md  gpu_pow_setup.md
src/dog/: __init__.py
src/doglib/: _hijack.py  asm.py  extelf.py  ezrop.py  fmt.py  heap.py  io_file.py  libc.py  log.py  misc.py  muney.py  pow.py
src/doglib/commandline/: fetch.py  fetchld.py  main.py  solve.py
src/doglib/data/: ctypes_builtin.h
src/doglib/data/extelf/: ctypes_builtin.h
src/doglib/dumpelf/: __init__.py  _dumper.py  _libc.py  _reconstruct.py
src/doglib/extelf/: __init__.py  _address.py  _builtin_types.py  _cheader.py  _crafter.py  _ctypes.py  _elf.py  _enum.py  _resolver.py
src/doglib/shellcode/: __init__.py
src/doglib_rs/: Cargo.toml  pyproject.toml
src/doglib_rs/crates/dwarf_parser/: Cargo.toml
src/doglib_rs/crates/dwarf_parser/src/: lib.rs
src/doglib_rs/crates/pow_solver/: Cargo.toml
src/doglib_rs/crates/pow_solver/examples/: bench.rs
src/doglib_rs/crates/pow_solver/src/: challenge.rs  field.rs  field_avx512.rs  lib.rs  solver.rs
src/doglib_rs/src/: lib.rs
src/dwarf_parser_rs/: Cargo.toml  pyproject.toml
src/dwarf_parser_rs/src/: lib.rs
tests/: t_dumpelf.py  t_fmtstr.py
tests/dumpelf/: conftest.py  target.c  test_dumpelf.py
tests/extelf/: challenge.c  challenge_cpp  challenge_cpp.cpp  complex_structs.h  solve.py  test_extelf.py
tests/muney/: muney.c  solve.py  test_muney.py
tests/pow_solver/: test_pow.py
