[project]
name = "doglib"
version = "0.1.0"
description = "personal extensions to pwntools"
readme = "README.md"
authors = [
    { name = "corgo", email = "corgo@dog.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pwntools",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
fast = [
    "doglib-dwarf-parser",
]

[project.scripts]
dog = "doglib.commandline.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
